--- a/EssentialFeediOS/Feed UI/Views/Feed.storyboard
+++ b/EssentialFeediOS/Feed UI/Views/Feed.storyboard
@@ -77,6 +77,9 @@ Location</string>
                                                             <state key="normal" title="↻">
                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </state>
+                                                            <connections>
+                                                                <action selector="retryButtonTapped" destination="4Aa-lg-gTp" eventType="touchUpInside" id="2PJ-l5-J6o"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.8901960784313725" green="0.8901960784313725" blue="0.8901960784313725" alpha="1" colorSpace="calibratedRGB"/>
@@ -118,6 +121,13 @@ Location</string>
                                         <constraint firstItem="AIZ-ON-RY8" firstAttribute="top" secondItem="ZOf-kB-Mm6" secondAttribute="topMargin" priority="999" constant="6" id="zeV-IS-QiH"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="H63-o4-rxp" id="QcT-Oq-hmA"/>
+                                    <outlet property="feedImageContainer" destination="FAU-iA-TTE" id="TOt-xf-avM"/>
+                                    <outlet property="feedImageView" destination="tsT-7G-iNQ" id="Hh7-tk-fGl"/>
+                                    <outlet property="locationContainer" destination="iiY-WY-aBZ" id="uUf-JJ-ae8"/>
+                                    <outlet property="locationLabel" destination="gSb-GM-nc6" id="cQN-gm-VTx"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
